Fixed things
- Fixed an issue that made the mentioned/replied box look weird;
- Enhances guildSection and emojiSection.

--- a/TranslucencePlus.theme.css
+++ b/TranslucencePlus.theme.css
@@ -1,6 +1,6 @@
 /**
  * @name TranslucencePlus
- * @version 1.5-20240814
+ * @version 1.5.1-20240814
  * @description A translucent/frosted glass Discord theme
  * @author MeowIce
  *
@@ -13,7 +13,6 @@
 	--app-bg: url(https://i.imgur.com/bgmVeyt.jpg);
 	--app-margin: 0px;
 	--app-radius: 8px; /*	-	*/
-	
 	--accent-hue: 192;
 	--accent-saturation: 72.3%;
 	--accent-lightness: 68.8%;
@@ -62,7 +61,15 @@
 .homeIcon-r0w4ny {
     display: none;
 }
-
+.tutorialContainer_f9623d .wrapper_c5f96a .childWrapper-1j_1ub:before {
+    position: absolute;
+    content: " ";
+    width: 48px;
+    height: 48px;
+    background-image: url(https://cdn.discordapp.com/attachments/877575290254139422/1222491587410657311/Untitled29_20240327200813.png?ex=66bd2ec3&is=66bbdd43&hm=9187a2d53714315d0c2799be44a64d75434db9978be4aa2677e58108e73ab447&=&quality=lossless);
+    background-size: contain;
+    border-radius: 40%;
+}
 .reaction_ec6b19 {
   background-color: rgba(0,0,0,0.3);
   border-radius: var(--message-radius);
@@ -82,15 +89,15 @@
     background-color:rgba(40, 40, 40, 0.4);
     border-radius: 6px;
 }
-.mentioned-Tre-dv {
+.mentioned_d5deea {
     --message-color: hsla(var(--mention-hsl),0.2);
 }
-.mentioned-Tre-dv,
+.mentioned_d5deea,
 .replying-eZ7p5z {
     border-radius: var(--app-radius);
 }
 
-.mentioned-Tre-dv:before,
+.mentioned_d5deea:before,
 .replying-eZ7p5z:before {
     display: block;
 }
@@ -150,6 +157,6 @@
 .itemCard_f02fcf, .wrapper_cd82a7, .outer_ac5d22, .padded_ac5d22, .interactive_ac5d22 {
 	background-color: rgb(40, 40, 40, 0.4);
 }
-.body_cd82a7, .inset_ac5d22 {
+.body_cd82a7, .inset_ac5d22, .guildSection_e58351, .emojiSection_e58351 {
 	background-color: rgb(60, 60, 60, 0.5);
 }
